--- a/02-crm/front/views/index.html
+++ b/02-crm/front/views/index.html
@@ -4,9 +4,9 @@
         <link rel="stylesheet" href="/assets/output.css">
     </head>
 
-    <body class="bg-black ">
+    <body>
         <div id="crm">
-            <h1 class="text-white">Hola mundo</h1>
+            <h1>Hola mundo</h1>
         </div>
     </body>
 </html>
